appId: ${APP_ID}
name: Pin and unpin multiple offline accounts
tags: [auth, android, offline, organization]
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/enter-offline-mode.yaml
- runFlow:
    file: ../subflows/add-code.yaml
    env:
      ISSUER: "GitHub"
      SECRET: "JBSWY3DPEHPK3PXP"
      ACCOUNT: "security@github.test"
      NOTE: ""
- runFlow:
    file: ../subflows/add-code.yaml
    env:
      ISSUER: "Stripe"
      SECRET: "KRUGS4ZANFZSAYJA"
      ACCOUNT: "billing@stripe.test"
      NOTE: ""
- longPressOn:
    id: "auth_code_item"
- tapOn: "(?s)^Select all.*"
- assertVisible: "(?s)^2 selected.*"
- assertVisible: "(?s)^Pin.*"
- tapOn: "(?s)^Pin.*"
- longPressOn:
    id: "auth_code_item"
- longPressOn: "Stripe"
- assertVisible: "(?s)^2 selected.*"
- assertVisible: "(?s)^Unpin.*"
- tapOn: "(?s)^Unpin.*"
- longPressOn:
    id: "auth_code_item"
- assertVisible: "(?s)^Pin.*"
- tapOn: "(?s)^Pin.*"
- longPressOn:
    id: "auth_code_item"
- longPressOn: "Stripe"
- assertVisible: "(?s)^2 selected.*"
- assertVisible: "(?s)^Pin.*"
- assertVisible: "(?s)^Unpin.*"
- tapOn: "(?s)^Unpin.*"
- longPressOn:
    id: "auth_code_item"
- assertVisible: "(?s)^Pin.*"
- tapOn: "(?s)^Pin.*"
- longPressOn:
    id: "auth_code_item"
- longPressOn: "Stripe"
- assertVisible: "(?s)^2 selected.*"
- assertVisible: "(?s)^Pin.*"
- assertVisible: "(?s)^Unpin.*"
- tapOn: "(?s)^Pin.*"
- longPressOn:
    id: "auth_code_item"
- longPressOn: "Stripe"
- assertVisible: "(?s)^2 selected.*"
- assertVisible: "(?s)^Unpin.*"
