appId: ${APP_ID}
name: Remove a tag from multiple offline accounts
tags: [auth, android, offline, tags]
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/enter-offline-mode.yaml
- runFlow:
    file: ../subflows/add-code.yaml
    env:
      ISSUER: "GitHub"
      SECRET: "JBSWY3DPEHPK3PXP"
      ACCOUNT: "security@github.test"
      NOTE: ""
- runFlow:
    file: ../subflows/add-code.yaml
    env:
      ISSUER: "Stripe"
      SECRET: "KRUGS4ZANFZSAYJA"
      ACCOUNT: "billing@stripe.test"
      NOTE: ""
- longPressOn:
    id: "auth_code_item"
- longPressOn: "Stripe"
- assertVisible: "(?s)^2 selected.*"
- tapOn: "(?s)^Add tag.*"
- tapOn: "Add new"
- assertVisible: "Create new tag"
- inputText: "Finance"
- tapOn: "Create"
- tapOn: "Done"
- longPressOn:
    id: "auth_code_item"
- longPressOn: "Stripe"
- assertVisible: "(?s)^2 selected.*"
- tapOn: "(?s)^Add tag.*"
- tapOn: "Finance"
- tapOn: "Done"
- assertNotVisible: "Finance"
- assertVisible: "GitHub"
- assertVisible: "Stripe"
