appId: ${APP_ID}
name: Organize offline accounts
tags:
  - auth
  - android
  - offline
  - organization
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/enter-offline-mode.yaml
- runFlow:
    file: ../subflows/add-code.yaml
    env:
      ISSUER: "GitHub"
      SECRET: "JBSWY3DPEHPK3PXP"
      ACCOUNT: "security@octocat.test"
      NOTE: ""
- runFlow:
    file: ../subflows/add-code.yaml
    env:
      ISSUER: "Stripe"
      SECRET: "KRUGS4ZANFZSAYJA"
      ACCOUNT: "billing@rocket.test"
      NOTE: ""
- assertVisible:
    text: "GitHub"
    above:
      text: "Stripe"
- tapOn: "Search"
- inputText: "stripe"
- assertVisible: "Stripe"
- assertNotVisible: "GitHub"
- eraseText: 100
- inputText: "octocat"
- assertVisible: "GitHub"
- assertNotVisible: "Stripe"
- eraseText: 100
- inputText: "nothing-matches"
- assertVisible: "No result.*"
- eraseText: 100
- tapOn: "Search"
- assertVisible: "GitHub"
- assertVisible: "Stripe"
- tapOn:
    id: "auth_sort_codes"
- assertVisible: "Issuer"
- assertVisible: "Account"
- assertVisible: "Frequently used"
- assertVisible: "Recently used"
- assertVisible: "Custom"
- tapOn: "Account"
- assertVisible:
    text: "Stripe"
    above:
      text: "GitHub"
