appId: ${APP_ID}
name: Import Auth fixtures offline
tags: [auth, android, offline, imports]
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/enter-offline-mode.yaml
- tapOn: "Settings"
- tapOn: "Data"
- extendedWaitUntil:
    visible: "Import codes"
    timeout: 10000
- tapOn: "Import codes"
- tapOn:
    id: "auth_import_plainText"
- tapOn: "Select file"
- tapOn: "Show roots"
- tapOn:
    text: "Downloads"
    index: 0
- tapOn: "Search"
- inputText: "plain_text_import.txt"
- extendedWaitUntil:
    visible: "^(?!Preview the file ).*plain_text_import.txt.*"
    timeout: 15000
- tapOn:
    id: "com.google.android.documentsui:id/item_root"
    index: 1
- runFlow:
    when:
      notVisible:
        id: "auth_import_success"
    commands:
      - tapOn:
          id: "com.google.android.documentsui:id/item_root"
          index: 1
- extendedWaitUntil:
    visible:
      id: "auth_import_success"
    timeout: 30000
- assertVisible: ".*imported 2 codes.*"
- tapOn: "Ok"
- pressKey: BACK
- pressKey: BACK
- pressKey: BACK
- tapOn: "Settings"
- tapOn: "Data"
- extendedWaitUntil:
    visible: "Import codes"
    timeout: 10000
- tapOn: "Import codes"
- scrollUntilVisible:
    element:
      id: "auth_import_googleAuthenticator"
    direction: DOWN
- tapOn:
    id: "auth_import_googleAuthenticator"
- assertVisible: "Select file"
- tapOn: "Select file"
- tapOn: "Show roots"
- tapOn:
    text: "Downloads"
    index: 0
- tapOn: "Search"
- inputText: "google_auth_migration.png"
- extendedWaitUntil:
    visible: "^(?!Preview the file ).*google_auth_migration.png.*"
    timeout: 15000
- tapOn:
    text: "^google_auth_migration\\.png,.*"
- extendedWaitUntil:
    visible:
      id: "auth_import_confirm_google_authenticator"
    timeout: 30000
- assertVisible: ".*Import 2 codes from Google Authenticator.*"
- tapOn: "Import"
- extendedWaitUntil:
    visible:
      id: "auth_import_success"
    timeout: 30000
- assertVisible: ".*imported 2 codes.*"
- tapOn: "Ok"
- extendedWaitUntil:
    visible:
      id: "auth_code_item"
    timeout: 10000
- assertVisible: "(?s).*security-lab@google.demo.*"
- assertVisible: "(?s).*build-bot@microsoft.demo.*"
